2002-01-24  Ryan Nunn  <triforce@merlin.net.au>
	* server/servewin32.cc : Accidently force WinNT/2K/XP to use the Win9x
	  comms.

2002-01-24  Ryan Nunn  <triforce@merlin.net.au>
	* msvcstuff/msvc_kludges.h : HAVE_SSTREAM
	* msvcstuff/exconfig/exconfig.cpp : Updated for new config constructors
	* mapedit/exult_studio.cc : Console redirection for Win32
	* server/server.cc, server/servewin32.* : Communications for Win9x/ME.
	  May have 'issues' if multiple copies of Exult and Exult Studio are
	  running. Doesn't properly detect if the connection is lost.

2002-01-24  Darke  <darkepaw@users.sourceforge.net>
	* conf/Configuration.cc: istream::rdbuf() under win32 seems to be
	slightly broken. It _should_ work now. Code is a mess, but I want to
	get off this 'doze box. <grin>

	* And again. Fixing a bug where I was reading the config file twice
	upon loading. The file size would grow exponentially at each write.

	* usecode/ucxt/src/opcodes.cc: Fixed compile problems under mingw.

	* usecode/ucxt/*: Renamed src/ucdump.cc to src/ucxt.cc to avoid name
	conflict, specifically under win32.

2002-01-23  Darke  <darkepaw@users.sourceforge.net>
	* exult.cc: Fixed a compile error with people compiling using
	--enable-usecode-debugger.
	* conf/*: Fixed problem with reading spaces as '\n's. Problem was
	std::istream >> std::string, breaks on spaces and '\n's, not just
	'\n's.
	* mapedit/shapegroup.*: Fixed namespace stuff.
	* usecode/ucxt/*: Minor code cleanup.

	* conf/Configuraion.cc,config.xml: Fixed bug involving blank lines
	before the first tag in a config file.

	* usecode/ucxt/*: Added Yet Another Datafile (u7misc.data), specifing
	the sizes in bytes of the parameter types, detailed in the
	u7opcodes.data file. AKA, more abstraction.

2002-01-21  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc (ExultStudio): Open 'chunks' file in both
	binary AND input mode.
	* mapedit/shapelst.cc:  Cleaned up 'render' loop.  Fonts now
	display, somewhat.